--- a/desktop.yml
+++ b/desktop.yml
@@ -3,6 +3,6 @@
   hosts: localhost
   connection: local
   roles:
-    - kewlfft.aur
+    #- kewlfft.aur
     - role: desktop
     - cloudalchemy.node_exporter
