--- a/roles/desktop/tasks/core.yml
+++ b/roles/desktop/tasks/core.yml
@@ -24,6 +24,7 @@
   tags: core
 
 - name: Add ansible_env.USER to docker
+  become: true
   user:
     name: "{{ ansible_env.USER }}"
     groups: docker
