--- a/roles/desktop/tasks/core.yml
+++ b/roles/desktop/tasks/core.yml
@@ -2,19 +2,30 @@
   become: true
   community.general.pacman:
     name:
+      - arandr
+      - bind
       - clamav
-      - pwgen
-      - pciutils
-      - networkmanager
-      - network-manager-applet
-      - openssh
-      - noto-fonts-cjk
-      - noto-fonts-extra
-      - noto-fonts-emoji
-      - ttf-jetbrains-mono
       - docker
-      - tcpdump
       - gnu-netcat
+      - iotop
+      - htop
+      - man-db
+      - ncdu
+      - network-manager-applet
+      - networkmanager
+      - net-tools
+      - noto-fonts-cjk
+      - noto-fonts-emoji
+      - noto-fonts-extra
+      - openssh
+      - pciutils
+      - pwgen
+      - tcpdump
+      - ttf-jetbrains-mono
+      - etcher
+      - ntp
+      - unzip
+      - sshpass
   tags: core
 
 - name: Ensure group docker exists
@@ -42,4 +53,14 @@
     - clamav-daemon
     - clamav-freshclam
     - docker
+    - ntpd
   tags: core
+
+# - name: localectl
+#   community.general.locale_gen:
+#     name: "{{ item }}"
+#     state: present
+#   with_items:
+#    - "en_GB.UTF-8"
+#    - "sv_SE.UTF-8"
+#   tags: core
