--- a/format.yml
+++ b/format.yml
@@ -2,7 +2,8 @@
 - name: Setup and format drive
   hosts: localhost
   connection: local
-  vars_prompt:
+  become: true
+#  vars_prompt:
 #    - name: loadkeys
 #      prompt: Which loadkeys to use
 #      private: no
@@ -14,9 +15,11 @@
   vars:
     device: /dev/nvme0n1
     loadkeys: se-lat6
-    passphrase: xxxx
-    user: fabbe
-    host: burk
+    passphrase: xxxxx
+    hostname: burk
+    locale: |
+      en_GB.UTF-8 UTF-8
+      sv_SE.UTF-8 UTF-8
   tasks:
 #    - name: loadkeys {{ loadkeys }}
 #      become: true
@@ -32,29 +35,25 @@
 #      become: true
 #      ansible.builtin.command: pacman-mirrors --set-branch stable --api --geoip
 #
-#    - name: update keyring
-#      become: true
-#      community.general.pacman:
-#        name:
-#          - archlinux-keyring
-#          - manjaro-keyring
-#        state: present
-#        update_cache: yes
+    - name: update keyring and install base tools
+      community.general.pacman:
+        name:
+          - archlinux-keyring
+          - manjaro-keyring
+          - manjaro-tools-base-git
+        state: present
+        update_cache: yes
 #
 #    - name: pacman-key init
-#      become: true
 #      ansible.builtin.command: pacman-key --init
 #
 #    - name: pacman-key populate
-#      become: true
 #      ansible.builtin.command: pacman-key --populate archlinux manjaro
 #
 #    - name: pacman-key refresh
-#      become: true
 #      ansible.builtin.command: pacman-key --refresh-keys
 
     - name: create boot partition
-      become: true
       community.general.parted:
         device: "{{ device }}"
         number: 1
@@ -66,14 +65,12 @@
         part_end: "512MiB"
 
     - name: create fat32 filesystem on boot partition
-      become: true
       community.general.filesystem:
         fstype: vfat
         opts: "-F 32"
         dev: "{{ device }}p1"
 
     - name: create primary partition
-      become: true
       community.general.parted:
         device: "{{ device }}"
         number: 2
@@ -83,47 +80,80 @@
         part_start: 512MiB
         part_end: 100%
 
-#    - name: create LUKS container with a passphrase
-#      become: true
-#      community.crypto.luks_device:
-#        device: "{{ device }}p2"
-#        state: opened
-#        name: cryptroot
-#        passphrase: "{{ passphrase }}"
+    - name: create LUKS container with a passphrase
+      community.crypto.luks_device:
+        device: "{{ device }}p2"
+        state: opened
+        name: cryptoroot
+        passphrase: "{{ passphrase }}"
 
 #    - name: open LUKS container with a passphrase
-#      become: true
 #      community.crypto.luks_device:
 #        device: "{{ device }}p2"
 #        state: opened
 #        name: cryptroot
 #        passphrase: "{{ passphrase }}"
 
-    - name: create a ext4 filesystem on cryptroot
-      become: true
+    - name: create a ext4 filesystem on cryptoroot
       community.general.filesystem:
         fstype: ext4
         dev: "/dev/mapper/cryptoroot"
 #        opts: -cc
 
-    # Before 2.3, option 'name' was used instead of 'path'
     - name: mount root to /mnt
-      become: true
       ansible.posix.mount:
         path: /mnt
         src: "/dev/mapper/cryptoroot"
         fstab: /tmp/test_fstab
         fstype: ext4
         state: mounted
+        opts: rw,noatime
 
     - name: mount EFI to /mnt/boot/efi
-      become: true
       ansible.posix.mount:
         path: /mnt/boot/efi
         src: "{{ device }}p1"
         fstab: /tmp/test_fstab
         fstype: vfat
         state: mounted
+
+    - name: basestrap /mnt
+      ansible.builtin.command: basestrap /mnt base linux510 linux-firmware vim networkmanager git ansible dhcp
+
+    - name: fstabgen
+      ansible.builtin.command: bash -c 'fstabgen -U /mnt >> /mnt/etc/fstab'
+
+    - name: set localtime to Europe/Stockholm
+      ansible.builtin.command: manjaro-chroot /mnt ln -sf /usr/share/zoneinfo/Europe/Stockholm /etc/localtime
+
+    - name: hwclock --systohc
+      ansible.builtin.command: manjaro-chroot /mnt hwclock --systohc
+
+    - name: set-local
+      ansible.builtin.copy:
+        content: '{{ locale }}'
+        dest: /mnt/etc/locale.gen
+
+    - name: locale-gen
+      ansible.builtin.command: manjaro-chroot /mnt locale-gen
+
+    - name: set a hostname
+      ansible.builtin.copy:
+        dest: /mnt/etc/hostname
+        content: "{{ hostname }}"
+
+    - name: install grub
+      ansible.builtin.command: manjaro-chroot /mnt pacman -S --noconfirm grub efibootmgr
+
+    - name: run grub-install
+      ansible.builtin.command: manjaro-chroot /mnt grub-install --target=x86_64-efi --efi-directory=/boot/efi --bootloader-id=manjaro --recheck
+
+    - name: update-grub
+      ansible.builtin.command: manjaro-chroot /mnt update-grub
+
+
+#    - name: run install
+#      ansible.builtin.command: ansible-playbook -c manjaro-chroot {{ ans_root }}/install.yml #--skip-tags "handlers"
 #TOOD
 # 1. bash -c 'fstabgen /mnt >> /mnt/etc/fstab'
 # 2. script for chroot
