--- a/roles/desktop/tasks/i3.yml
+++ b/roles/desktop/tasks/i3.yml
@@ -11,6 +11,7 @@
     name:
       - xorg-server
       - xorg-xinit
+      - xorg-xev
       - xfce4-notifyd
       - i3-wm
       - i3status
@@ -54,8 +55,26 @@
   tags: i3
   when: etc_X11_xorg_conf | length > 0
 
+- name: "set XkbLayout se"
+  become: true
+  ansible.builtin.copy:
+    content: |
+          # Written by systemd-localed(8), read by systemd-localed and Xorg. It's
+          # probably wise not to edit this file manually. Use localectl(1) to
+          # instruct systemd-localed to update it.
+          Section "InputClass"
+            Identifier "system-keyboard"
+            MatchIsKeyboard "on"
+            Option "XkbLayout" "se"
+          EndSection
+
+    dest: "/etc/X11/xorg.conf.d/00-keyboard.conf"
+  tags: i3
+
+#TODO add current net bandwidth usage, current io usage in mb
 - name: "Copy i3blocks"
   ansible.builtin.copy:
     src: "files/i3blocks"
+    mode: a+x
     dest: "{{ ansible_env.HOME }}/.config"
   tags: i3
