--- a/roles/desktop/tasks/audio.yml
+++ b/roles/desktop/tasks/audio.yml
@@ -5,6 +5,7 @@
       - alsa-lib
       - alsa-utils
       - pulseaudio
+      - pulseaudio-bluetooth
       - pavucontrol
       - pulseaudio-alsa
   tags: audio
