set locale in bash_profile
add hey and telnet utils
added ldapsearch on code

Resolves: master

--- a/roles/desktop/tasks/core.yml
+++ b/roles/desktop/tasks/core.yml
@@ -12,7 +12,9 @@
       - gnu-netcat
       - htop
       - iotop
+      - inetutils
       - jq
+      - hey
       - man-db
       - ncdu
       - net-tools
@@ -45,6 +47,13 @@
     name: "{{ ansible_env.USER }}"
     groups: docker
     append: yes
+  tags: core
+
+- name: Set locale
+  become: true
+  community.general.locale_gen:
+    name: sv_SE.UTF-8
+    state: present
   tags: core
 
 - name: start core services
