add true i3 lock
disable dragable i3 windows
test screensaver

Resolves: master

--- a/roles/desktop/tasks/i3.yml
+++ b/roles/desktop/tasks/i3.yml
@@ -39,6 +39,14 @@
     - ".config/i3/config"
   tags: i3
 
+- name: "copy lock"
+  become: true
+  ansible.builtin.template:
+    src: "lock.j2"
+    mode: a+x
+    dest: "/usr/local/bin/lock"
+  tags: i3
+
 - name: "Copy etc/X11/xorg.conf"
   become: true
   ansible.builtin.copy:
