add support for ubuntu 22.04
update i3blocks, moved i3blocks to template for temp chips and gpu
add profile to mimic bash_profile
fix rxvt scroll while outputing

--- a/roles/desktop/defaults/main.yml
+++ b/roles/desktop/defaults/main.yml
@@ -9,7 +9,11 @@ additionalPackages: []
 additionalPackagesAur: []
 additionalGoInstalls: []
 
+i3blocks_cpu_sensor_chip: ""
+i3blocks_gpu_sensor_chip: ""
+
 bash_profile_extra: ""
+profile_extra: ""
 bash_rc_completion_extra: ""
 bash_alias_extra: ""
 
