--- a/roles/desktop/tasks/audio.yml
+++ b/roles/desktop/tasks/audio.yml
@@ -8,6 +8,7 @@
       - pulseaudio-bluetooth
       - pavucontrol
       - pulseaudio-alsa
+  when: ansible_facts['distribution'] == 'Archlinux'
   tags: audio
 
 - name: Fix Cork for pulse
