--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -16,8 +16,8 @@
 - include_tasks: i3.yml
   tags: i3
 
-- include_tasks: audio.yml
-  tags: audio
+#- include_tasks: audio.yml
+#  tags: audio
 
 - include_tasks: code.yml
   tags: code
