--- a/user_configuration.json
+++ b/user_configuration.json
@@ -4,11 +4,9 @@
     "audio_config": {
         "audio": "pipewire"
     },
-    "bootloader": "Grub",
+    "bootloader": "Systemd-boot",
     "config_version": "2.6.3",
     "debug": false,
-    "disk_config": {},
-    "disk_encryption": {},
     "hostname": "arch",
     "kernels": [
         "linux-lts"
