--- a/roles/desktop/tasks/core.yml
+++ b/roles/desktop/tasks/core.yml
@@ -1,4 +1,4 @@
-- name: Install core packages
+- name: Install core packages pacman
   become: true
   community.general.pacman:
     name:
@@ -34,6 +34,12 @@
       - ttf-jetbrains-mono
       - unzip
   tags: core
+
+- name: Install core packages yay
+  kewlfft.aur.aur:
+    name:
+      - yay
+  tags: code
 
 - name: Ensure group docker exists
   ansible.builtin.group:
